<resources>
    <string name="app_name">Simple Carnival</string>
    <string name="score_300">Score : 300</string>
    <string name="i_m_ready">I\'m Ready</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="create_a_new_user">Create A New User</string>
    <string name="background_4_people_jumping">Background - 4 people Jumping</string>
    <string name="LeftCup">Left Cup</string>
    <string name="MiddleCup">Middle Cup</string>
    <string name="RightCup">Right Cup</string>
    <string name="start">START</string>
    <string name="streak">Streak</string>
    <string name="petting_zoo_welcome">Welcome to the Petting Zoo!</string>
    <string name="petting_zoo_total_clicks">Total Clicks: %1$d</string>
    <string name="settings">Settings</string>
    <string name="log_back_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="GameLabel">Cup Shuffler</string>
    <string name="mainLabel">Cup Shuffler</string>
    <string name="StartButton">Button</string>
    <string name="startbutton">Start</string>
    <string name="StreakLabel">Streak : 0</string>
    <string name="MainLabel">Cup Shuffler</string>
    <string name="streakLabel">Streak : 0</string>
    <string name="create">Create New User</string>
    <string name="a_star">A star</string>
    <string name="choose_user">Choose User</string>
    <string name="login">Login</string>
    <string name="level_1">Level : 1</string>
    <string name="ball">ball</string>
    <string name="petting_zoo_timer">Time Left: %1$d</string>
    <string name="top_score">Top Score</string>
    <string name="a_circle">A Circle</string>
    <string name="your_stats">Your Stats</string>
    <string name="score">Score</string>
    <string name="level">Level</string>
    <string name="coins">Coins</string>
    <string name="balltrans">TODO</string>
    <string name="highest_level">Highest Level :</string>
    <string name="highest_level_1">Highest Level : 1</string>
    <string name="coins_collected_0">Coins Collected : 0</string>
    <string name="zoo_instructions">Click the Happy Pig, but not Angry Pig. Reach 30 clicks to level up.</string>
    <string name="zoo_level">Level: %1$d</string>
    <string name="petting_zoo_click_count">"Clicks: %1$d"</string>
    <string name="zoo_coins">Coins: %1$d</string>
    <string name="zoo_win">You Win!</string>
    <string name="zoo_lose">You Lose!</string>
    <string name="zoo_total_coins">Total Coins: %1$d</string>
    <string name="zoo_start">Start</string>
    <string name="course_cleared_title">COURSE CLEARED!</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_ve_beat_the_game">You\'ve beat the game</string>
    <string name="no_saved_data">No Saved Data</string>
</resources>
