<?xml version="1.0" encoding="utf-8"?>
<!--Todo: Change id of CL IDS MUST BE UNIQUE-->
<!--Todo: remove tools:ignore="HardcodedText" -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game2ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/MainLabel"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/MainLabel"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/StreakLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/level_1"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/highestLabel"
                android:layout_width="218dp"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:text="@string/highest_level"
                android:textColor="#000000"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/coinsLabel"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:text="@string/coins_collected_0"
                android:textColor="#000000"
                android:textSize="19sp"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="461dp">

            <ImageView
                android:id="@+id/Ball"
                android:layout_width="88dp"
                android:layout_height="102dp"
                android:layout_gravity="center"
                android:contentDescription="@string/ball"
                app:srcCompat="@drawable/transball" />

            <ImageView
                android:id="@+id/LeftCup"
                android:layout_width="118dp"
                android:layout_height="204dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="2dp"
                android:clickable="true"
                android:contentDescription="@string/LeftCup"
                android:rotation="180"
                android:src="@drawable/cup" />

            <ImageView
                android:id="@+id/MiddleCup"
                android:layout_width="118dp"
                android:layout_height="204dp"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:clickable="true"
                android:contentDescription="@string/MiddleCup"
                android:rotation="180"
                android:src="@drawable/cup" />

            <ImageView
                android:id="@+id/RightCup"
                android:layout_width="118dp"
                android:layout_height="204dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginBottom="2dp"
                android:clickable="true"
                android:contentDescription="@string/RightCup"
                android:rotation="180"
                android:src="@drawable/cup" />

            <Button
                android:id="@+id/StartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/start" />

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
