<?xml version="1.0" encoding="utf-8"?>
<!--Todo: Change id of CL -->
<!--Todo: remove tools:ignore="HardcodedText" -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game3ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_user_picker_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_back_in"
        android:contentDescription="@string/background_4_people_jumping"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_user_picker_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/login"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_user_picker_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/colorEveningSetBlue"
        android:paddingVertical="15dp"
        android:paddingHorizontal="40dp"
        android:text="@string/log_back_in"
        app:cornerRadius="100dp"
        android:textAllCaps="false"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintBottom_toBottomOf="@+id/login_user_picker_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_user_picker_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/colorWhite"
        android:paddingHorizontal="20dp"
        android:text="@string/create"
        android:textColor="@color/colorPrimaryDarkGrey"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/login_user_picker_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginVertical="40dp"
        app:layout_constraintBottom_toTopOf="@+id/login_user_picker_button"
        app:layout_constraintTop_toBottomOf="@+id/login_user_picker_title"
        tools:layout_editor_absoluteX="35dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
